--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.11.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
+    "@sentry/nextjs": "^7.105.0",
     "@tanstack/react-query": "^4.36.1",
     "@types/node": "20.11.30",
     "@types/react": "18.2.67",
